updated states
